objects/Face_Specification__c.object
<CustomObject>
    <fields>
        <fullName>Bleed__c</fullName>
        <description>What&apos;s the print bleed in inches? This is helpful for printer accuracy</description>
        <inlineHelpText>What&apos;s the print bleed in inches? This is helpful for printer accuracy</inlineHelpText>
        <label>Bleed</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMYK</fullName>
                </value>
                <value>
                    <fullName>RGB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagonal_Length__c</fullName>
        <description>In Inches</description>
        <inlineHelpText>In Inches</inlineHelpText>
        <label>Diagonal Length</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Walker - Los Angeles</fullName>
                </value>
                <value>
                    <fullName>PMT - Hawaii</fullName>
                </value>
                <value>
                    <fullName>Peerless - Chicago</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static LED Backlit</fullName>
                </value>
                <value>
                    <fullName>Static LED Frontlit</fullName>
                </value>
                <value>
                    <fullName>Digital Screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motion_Rate__c</fullName>
        <label>Motion Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_Temperature_High__c</fullName>
        <description>In Farenheit, convert if in Celsius</description>
        <inlineHelpText>In Farenheit, convert if in Celsius</inlineHelpText>
        <label>Operating Temperature High</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Temperature_Low__c</fullName>
        <description>In Farenheit, convert if in Celsius</description>
        <inlineHelpText>In Farenheit, convert if in Celsius</inlineHelpText>
        <label>Operating Temperature Low</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optimal_Material__c</fullName>
        <description>note - 3M IJ180C requires a (semi-gloss) laminate mounted onto dibond</description>
        <inlineHelpText>note - 3M IJ180C requires a (semi-gloss) laminate mounted onto dibond</inlineHelpText>
        <label>Optimal Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duratrans</fullName>
                </value>
                <value>
                    <fullName>Backlit Paper</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
                <value>
                    <fullName>3M IJ180C</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outer_Dimension_Depth__c</fullName>
        <description>In Inches</description>
        <inlineHelpText>In Inches</inlineHelpText>
        <label>Outer Dimension Depth</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_Dimension_Length__c</fullName>
        <description>In Inches</description>
        <inlineHelpText>In Inches</inlineHelpText>
        <label>Outer Dimension Length</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_dimension_width__c</fullName>
        <description>In Inches</description>
        <inlineHelpText>In Inches</inlineHelpText>
        <label>Outer Dimension Width</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pixel_Ratio_Height__c</fullName>
        <label>Pixel Ratio Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pixel_Ratio_Width__c</fullName>
        <label>Pixel Ratio Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>300 DPI</fullName>
                </value>
                <value>
                    <fullName>300 PPI</fullName>
                </value>
                <value>
                    <fullName>1080p</fullName>
                </value>
                <value>
                    <fullName>1080i</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visible_Area_Diagonal__c</fullName>
        <label>Visible Area - Diagonal</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible_Area_Vertical__c</fullName>
        <description>Visible Area - Vertical in Inches</description>
        <inlineHelpText>Visible Area - Vertical in Inches</inlineHelpText>
        <label>Visible Area - Vertical</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible_Area__c</fullName>
        <description>Horizontal Visible Area in Inches</description>
        <inlineHelpText>Horizontal Visible Area in Inches</inlineHelpText>
        <label>Visible Area - Horizontal</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Length__c</fullName>
        <description>In months</description>
        <inlineHelpText>In months</inlineHelpText>
        <label>Warranty Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_Margin_Horizontal__c</fullName>
        <description>With Margin - Vertical in Inches</description>
        <inlineHelpText>With Margin - Vertical in Inches</inlineHelpText>
        <label>With Margin - Horizontal</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_Margin_Vertical__c</fullName>
        <description>With Margin - Vertical in Inches</description>
        <inlineHelpText>With Margin - Vertical in Inches</inlineHelpText>
        <label>With Margin - Vertical</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Face Specification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Visible_Area__c</columns>
        <columns>Visible_Area_Vertical__c</columns>
        <columns>With_Margin_Horizontal__c</columns>
        <columns>With_Margin_Vertical__c</columns>
        <columns>Bleed__c</columns>
        <columns>Color__c</columns>
        <columns>File_Type__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Media_Type__c</columns>
        <columns>Optimal_Material__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Face Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Face Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>